--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,12 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/main/VisualStudio.gitignore
 
+# Docker folders
+db/
+
+# vs code
+.vscode/
+
 # User-specific files
 *.rsuser
 *.suo
